[package]
name = "rust-lib"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[build-dependencies]
cbindgen = "0.29.2"

[dependencies]
stdint = "1.1.0"

[lib]
crate-type=["staticlib", "cdylib"]

[profile.release]
strip = true
